# wds

./: .eslintrc.js  .gitignore  README.md  eslint.config.js  index.html  package.json
docs/: wds.psd
scripts/: conf.cli.js
src/: app.vue  locales.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  cache.rs  command.rs  common.rs  lib.rs  main.rs  server.rs  settings.rs  utils.rs  window_state.rs
src/components/: dialog-confirm.vue  edit-dir.vue  edit-port.vue  edit-profile.vue  edit-server.vue  fps-detector.vue  icon-label.vue  log-page.vue  profile-page.vue  settings-page.vue
src/utils/: api-private.js  helper.js  icons.js  store.js  util.js
