[package]
name = "wds"
version = "1.0.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

once_cell = "1.16"

rand = "0.8"
fns = "0.0"

dav-server = { version = "0.5" }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

jsonwebtoken = "8.2"
http-auth-basic = "0.3"
cookie = "0.17"
urlencoding = "2.1"
local-ip-address = "0.5"
tokio-rustls = "0.23"

futures = "0.3"
uuid = "1.3"
rusqlite = { version = "0.28", features = ["bundled"] }
tokio-rusqlite = "0.3"

tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[dependencies.tauri]
version = "1.2"
features = [ 
    "dialog-open", 
    "dialog-save", 
    "window-set-fullscreen", 
    "path-all", 
    "protocol-all", 
    "shell-open", 
    "window-set-always-on-top", 
    "window-set-cursor-position", 
    "window-set-focus"
]

[build-dependencies]
tauri-build = { version = "1.2", features = [] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
