[package]
name = "wds"
version = "2.0.0"
description = "Webdav Server"
authors = ["cenfun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wds_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [
    "dialog-open",
    "dialog-save",
    "window-set-fullscreen",
    "path-all",
    "protocol-all",
    "shell-open",
    "window-set-always-on-top",
    "window-set-cursor-position",
    "window-set-focus",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1.16"

rand = "0.8"
fns = "0.0"

dav-server = { version = "0.5" }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

jsonwebtoken = "8.2"
http-auth-basic = "0.3"
cookie = "0.17"
urlencoding = "2.1"
local-ip-address = "0.5"
futures = "0.3"
uuid = "1.3"
rusqlite = { version = "0.28", features = ["bundled"] }
tokio-rusqlite = "0.3"

tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }


[build-dependencies]
tauri-build = { version = "2", features = [] }
