[package]
name = "wds"
version = "2.0.0"
description = "Webdav Server"
authors = ["cenfun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wds_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1"

rand = "0.8"
fns = "0.0"

dav-server = { version = "0.11", features = ["hyper"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

jsonwebtoken = "9"
http-auth-basic = "0.3"
cookie = "0.17"
urlencoding = "2"
local-ip-address = "0.6"
futures = "0.3"
uuid = "1"
time = "=0.3.47"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
